@@ -226,9 +226,7 @@ template svec to_svec(const bvec &v);
 template svec to_svec(const ivec &v);
 template svec to_svec(const vec &v);
 
-#if (GCC_VERSION >= 30400)
 template ivec to_ivec(const bvec &v);
-#endif
 template ivec to_ivec(const svec &v);
 template ivec to_ivec(const vec &v);
 
@@ -258,10 +256,8 @@ template imat to_imat(const smat &m);
 template imat to_imat(const mat &m);
 
 template mat to_mat(const bmat &m);
-#if (GCC_VERSION >= 30400)
 template mat to_mat(const smat &m);
 template mat to_mat(const imat &m);
-#endif
 
 template cmat to_cmat(const bmat &m);
 template cmat to_cmat(const smat &m);
