@@ -29,7 +29,6 @@
 #ifndef CONVERTERS_H
 #define CONVERTERS_H
 
-#include <itpp/base/itcompat.h>
 #include <itpp/base/help_functions.h>
 #include <itpp/base/math/misc.h>
 
@@ -436,10 +435,7 @@ extern template svec to_svec(const bvec &v);
 extern template svec to_svec(const ivec &v);
 extern template svec to_svec(const vec &v);
 
-// Workaround for GCC 3.3.x error when using -finine-functions or -O3 flag
-#if (GCC_VERSION >= 30400)
 extern template ivec to_ivec(const bvec &v);
-#endif
 extern template ivec to_ivec(const svec &v);
 extern template ivec to_ivec(const vec &v);
 
@@ -469,10 +465,8 @@ extern template imat to_imat(const smat &m);
 extern template imat to_imat(const mat &m);
 
 extern template mat to_mat(const bmat &m);
-#if (GCC_VERSION >= 30400)
 extern template mat to_mat(const smat &m);
 extern template mat to_mat(const imat &m);
-#endif
 
 extern template cmat to_cmat(const bmat &m);
 extern template cmat to_cmat(const smat &m);
